--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
         </div>
         <div class="text-white ml-[730px] mt-20 text-xl">
             <p>
-                Copyright <b>&#169;</b> 2024 thedesigncompany Pvt Ltd. All Right reserved
+                Copyright <b>&#169;</b> 2024 TheDesigncompany Pvt Ltd. All Right reserved
             </p>
-            
             
         </div>
         </div>
