--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
 <body>
     <body class="relative w-full mx-auto transition-all duration-1000 !scroll-smooth">
         <nav class="">
-            <div class="  mx-auto flex items-center justify-between pt-5 relative mx-10">
+            <div class=" flex items-center justify-between pt-5 relative mx-10">
                 <a href="/" class="cursor-pointer "><img src="./Resources/Group 1.svg" alt="The Design Company" width="145px"></a>
         
                 <ul class="flex space-x-5 font-semibold text-base font-Inter">
