--- a/order.html
+++ b/order.html
@@ -45,14 +45,36 @@
                 </p>
                </div>
                <div class="w-[1171px] h-[296px] bg-light-purple rounded-[35px] mt-5 mb-8">
+                <div class="mx-flex justify-between">
+                    <div class="flex gap-4">
+                        <div>
+                            <p>ORDER PLACED</p>
+                            <p>8 March 2023</p>
+                        </div>
+                        <div>
+                            <p>TOTAL</p>
+                            <p>₹ 10,000</p>
+                        </div>
+                        <div>
+                            <p>DELIVERED TO</p>
+                            <p>USER NAME</p>
+                        </div>
+                    </div>
                 <div class="flex justify-center opacity-50">
-                    <div class="mt-auto">
+                    <div class="mt-24">
                         <img src="./Resources/logo_white.svg" alt="" class="">
                     </div>
                 </div>
-                
+                <div>
+                    <div class="w-[200 px] h-[200px] bg-white">
+                    </div>
+                    <div>
+                        <p>BIRTHDAY POSTER DESIGN</p>
+                        <p>CUSTOMIZE POSTER</p>
+                    </div>
+                </div>
                </div>
-
+            </div>
            </div>
     </body>
 </body>
