--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     </li>
                 </ul>
                 <div class="flex font-semibold text-base font-Inter">
-                    <button  class="pr-3 items-center flex space-x-2" data-aos="zoom-in-left" data-aos-delay="1150"><img width="20px" height="20px" src="./Resources/ingate.png" alt="">Login</button>
-                    <button class="rounded-xl bg-light-purple w-20 h-8 hover:w-24 hover:h-12 transition-all duration-800 text-white" style="color: aliceblue;" data-aos="fade-left" data-aos-delay="1300">Sign Up</button>
+                    <button  class="pr-3 items-center flex space-x-2" data-aos="zoom-in-left" data-aos-delay="1150"><img width="20px" height="20px" src="./Resources/ingate.png" alt="" onclick="window.location.href='Login.html';" >Login</button>
+                    <button class="rounded-xl bg-light-purple w-20 h-8 hover:w-24 hover:h-12 transition-all duration-800 text-white" style="color: aliceblue;" data-aos="fade-left" data-aos-delay="1300" onclick="window.location.href='SignUp.html';" >Sign Up</button>
                 </div>
             </div>
            </nav>
