--- a/signUp.html
+++ b/signUp.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="">
-        <div class="  mx-auto flex items-center justify-between pt-5 relative mx-10">
+        <div class=" flex items-center justify-between pt-5 relative mx-10">
             <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/Group 1.svg" alt="The Design Company" width="145px"></a>
     
             <ul class="flex space-x-5 font-semibold text-base font-Inter">
