--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <script>document.documentElement.classList.add('js')</script>
 </head>
 
-<body class="relative w-full mx-auto transition-all duration-1000 !scroll-smooth overflow-x-hidden">
-        <nav class="">
+<body class="relative w-full mx-auto transition-all duration-1000 !scroll-smooth scrollbar-hide">
+        <nav class="w-full">
             <div class="flex items-center justify-between pt-5 relative mx-10">
                 <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/Group 1.svg" alt="The Design Company" width="145px"></a>
         
                 <ul class="flex space-x-5 font-semibold text-base font-Inter">
                     <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group 
                     pb-2" data-aos="zoom-in-left" data-aos-delay="450">
-                        <a href="#">Category</a>
+                        <a href="./catagory.html">Category</a>
                         <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                     </li>
                     <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group
@@ -48,7 +48,7 @@
                 </div>
             </div>
            </nav>
-   <div class="relative mx-auto pt-3" data-aos="fade-left" data-aos-delay="400">
+   <div class="relative mx-auto pt-3" data-aos="fade-left" data-aos-delay="400 w-full">
     <a href="#" >
         <img src="./Resources/Flyer.gif" alt="" class="w-full">
     </a>
@@ -59,16 +59,19 @@
             Category
         </p>
        </div>
-       <div class="pt-3 flex space-x-7 overflow-hidden flex-nowrap ">
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="400"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="500"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="600"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="700"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="800"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="900"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="1000"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="1100"></div>
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0" data-aos="zoom-in-left" data-aos-delay="1200"></div>
+       <div class="pt-3 flex space-x-5 w-full overflow-x-scroll scrollbar-hide"> 
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="400"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="500"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="600"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="700"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="800"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="900"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1000"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1100"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1200"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1200"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1200"></div>
+            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1200"></div>
        </div>
    </div>
     <div
