--- a/catagory.html
+++ b/catagory.html
@@ -46,18 +46,18 @@
         </div>
        </nav>
        <div class="h-[135px] bg-light-purple w-full mt-5 flex justify-center items-center">
-            <span class="font-Inter font-semibold text-white text-4xl">
+            <span class="font-Inter font-semibold text-white text-4xl" data-aos-delay="400" data-aos="zoom-in-left">
                 Catagory
             </span>
        </div>
        <div>
-            <div class="mt-4 ml-8 mx-3">
+            <div class="mt-4 ml-8 mx-3" data-aos-delay="400" data-aos="zoom-in-left">
                 <span class="font-Inter text-2xl font-bold">
                     Sesonal Festivals Design
                 </span>
             </div>
             <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
-                <div class="h-[179px] w-[245px] ml-4">
+                <div class="h-[179px] w-[245px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -65,7 +65,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="500" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -73,7 +73,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -81,7 +81,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -89,7 +89,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -97,7 +97,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -105,7 +105,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -113,7 +113,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -121,7 +121,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -129,7 +129,7 @@
                         <span>Mahashivratri</span>
                     </div>
                 </div>
-                <div class="h-[179px] w-[245px]">
+                <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
 
                     </div>
@@ -139,6 +139,184 @@
                 </div>
             </div>
        </div>
+       <div>
+        <div class="mt-4 ml-8 mx-3" data-aos-delay="400" data-aos="zoom-in-left">
+            <span class="font-Inter text-2xl font-bold">
+                Sesonal Festivals Design
+            </span>
+        </div>
+        <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
+            <div class="h-[179px] w-[245px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="500" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+            <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
+                <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+                </div>
+                <div class=" mt-2 text-center font-semibold font-Inter">
+                    <span>Mahashivratri</span>
+                </div>
+            </div>
+        </div>
+   </div>
+   <div>
+    <div class="mt-4 ml-8 mx-3" data-aos-delay="400" data-aos="zoom-in-left">
+        <span class="font-Inter text-2xl font-bold">
+            Sesonal Festivals Design
+        </span>
+    </div>
+    <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
+        <div class="h-[179px] w-[245px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="500" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+        <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
+            <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
+
+            </div>
+            <div class=" mt-2 text-center font-semibold font-Inter">
+                <span>Mahashivratri</span>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
        <script>
