--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <li class="font-Kanit font-semibold mb-5 text-2xl" data-aos="zoom-in-left" data-aos-delay="400">Menu</li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="500"><a href="">About Us</a></li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="600"><a href="">Designs</a></li>
-                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="700"><a href="">Contact</a></li>
+                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="700"><a href="./SendUsMessage.html">Contact</a></li>
                 </ul>
             </div>
             <div class="text-white mt-9">
