--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                     </li>
                     <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group
-                    pb-2 " data-aos="zoom-in-left" data-aos-delay="900"><a href="#">About</a>
+                    pb-2 " data-aos="zoom-in-left" data-aos-delay="900"><a href="./about.html">About</a>
                         <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                     </li>
                 </ul>
@@ -165,15 +165,15 @@
             <div class="text-white mt-9 ml-[4.5rem]">
                 <ul>
                     <li class="font-Kanit font-semibold mb-5 text-2xl" data-aos="zoom-in-left" data-aos-delay="400">Menu</li>
-                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="500"><a href="">About Us</a></li>
+                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="500"><a href="./about.html">About Us</a></li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="600"><a href="">Designs</a></li>
-                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="700"><a href="./SendUsMessage.html">Contact</a></li>
+                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="700"><a href="./send.html">Contact</a></li>
                 </ul>
             </div>
             <div class="text-white mt-9">
                 <ul>
                     <li class="font-Kanit font-semibold mb-5 text-2xl" data-aos="zoom-in-left" data-aos-delay="400">Services</li>
-                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="500"><a href="">Privacy Policy</a></li>
+                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="500"><a href="./privacypolicy.html">Privacy Policy</a></li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="600"><a href="">Terms of Use</a></li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="700"><a href="">Refund & Cancellation Policy</a></li>
                 </ul>
@@ -189,7 +189,7 @@
                         <ul class="flex mt-7">
                             <li class="w-[40px] h-[40px] mr-[20px]" data-aos="zoom-in-left" data-aos-delay="600"><a href="https://www.instagram.com/thedesigncompany.art/"><img src="./Resources/Instagram_icon.svg" alt="Instagram_icon"></a></li>
                             <li class="w-[40px] h-[40px] mr-[20px]" data-aos="zoom-in-left" data-aos-delay="800"><a href="https://x.com/thedesigncpmny?s=08"><img src="./Resources/X_icon.svg" alt="X_icon"></a></li>
-                            <li class="w-[60px] h-[60px] mr-[20px]" data-aos="zoom-in-left" data-aos-delay="1000"><a href=""><img src="./Resources/meta_icon.svg" alt="meta_icon"></a></li>
+                            <li class="w-[60px] h-[60px] mr-[20px]" data-aos="zoom-in-left" data-aos-delay="1000"><a href="https://www.facebook.com/people/Thedesigncompany/61557362758752/"><img src="./Resources/meta_icon.svg" alt="meta_icon"></a></li>
                         </ul>
                     </li>    
                 </ul>
