--- a/signUp.html
+++ b/signUp.html
@@ -45,7 +45,7 @@
          </div>
 
          <div class = "LoginForm bg-light-purple h-auto w-2/4 rounded-3xl">
-            <h1 class ="text-white pl-6 pt-10 mb-8 ml-10 text-4xl font-bold"> Creat Your Account </h1>
+            <h1 class ="text-white pl-6 pt-10 mb-8 ml-10 text-4xl font-bold"> Create Your Account </h1>
             <form action="">
                 <i class="fa-solid fa-user text-white text-lg ml-16"></i>
                 <input type="text" id="Username" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold placeholder:bg-light-purple " placeholder="Name"><br>
