--- a/catagory.html
+++ b/catagory.html
@@ -47,7 +47,7 @@
        </nav>
        <div class="h-[135px] bg-light-purple w-full mt-5 flex justify-center items-center">
             <span class="font-Inter font-semibold text-white text-4xl" data-aos-delay="400" data-aos="zoom-in-left">
-                Catagory
+                Category
             </span>
        </div>
        <div>
