--- a/Login.html
+++ b/Login.html
@@ -38,27 +38,29 @@
         </div>
        </nav>
 
-       <div class="flex justify-between border-2 border-light-purple rounded-3xl m-16 h-5/6  w-auto">
+       <div class="flex justify-between border-2 border-light-purple rounded-3xl m-24 ml-40 mr-40 h-5/6  w-auto">
 
          <div>
             <img src="" alt="">
          </div>
 
-         <div class = "LoginForm bg-light-purple h-auto w-2/4 rounded-3xl">
-            <h1 class ="text-white pl-6 pt-10 mb-8 ml-10 text-4xl font-bold"> Login Your Account </h1>
-            <form action="">
+         <div class = "LoginForm bg-light-purple h-auto w-2/4 rounded-3xl ">
+            <div class = "m-20">
+                <h1 class ="text-white pl-6 pt-10 mb-4 ml-10 text-4xl font-bold"> Login Your Account </h1>
+            <form action="" class="">
                 <i class="fa-solid fa-user text-white text-lg ml-16"></i>
                 <input type="text" id="Username" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold " placeholder="Username"><br>
-                <div class="bottom w-2/4 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
+                <div class="bottom w-2/3 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
                 <i class="fa-solid fa-lock text-white text-lg ml-16"></i>
                 <input type="password" id="Password" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold" placeholder="Password"><br>
-                <div class="bottom w-2/4 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
-                <button class="bg-white text-light-purple h-12 w-32 ml-48 mt-10 rounded-3xl font-semibold text-lg ">Log in</button><br>
+                <div class="bottom w-2/3 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
+                <button class="bg-white text-light-purple h-12 w-32 ml-56 mt-10 rounded-3xl font-semibold text-lg ">Log in</button><br>
                 <div class=" pt-6 mb-16">
                     <a href="signUp.html" class="text-white text-lg font-semibold mx-28">Create Account</a>
                     <a href="SendUsMessage.html" class="text-white font-semibold">Forgot Password?</a>
                 </div>
             </form>
+            </div>
          </div>
 
        </div>
