--- a/signUp.html
+++ b/signUp.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="">
-        <div class=" flex items-center justify-between pt-5 relative mx-10">
+        <div class="  mx-auto flex items-center justify-between pt-5 relative mx-10">
             <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/Group 1.svg" alt="The Design Company" width="145px"></a>
     
             <ul class="flex space-x-5 font-semibold text-base font-Inter">
@@ -38,29 +38,31 @@
         </div>
        </nav>
 
-       <div class="flex justify-between border-2 border-light-purple rounded-3xl m-14 w-auto">
+       <div class="flex justify-between border-2 border-light-purple rounded-3xl m-24 ml-40 mr-40 w-auto">
 
          <div>
             <img src="" alt="">
          </div>
 
          <div class = "LoginForm bg-light-purple h-auto w-2/4 rounded-3xl">
-            <h1 class ="text-white pl-6 pt-10 mb-8 ml-10 text-4xl font-bold"> Create Your Account </h1>
-            <form action="">
-                <i class="fa-solid fa-user text-white text-lg ml-16"></i>
-                <input type="text" id="Username" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold placeholder:bg-light-purple " placeholder="Name"><br>
-                <div class="bottom w-2/4 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
-                <i class="fa-solid fa-envelope text-white text-lg ml-16"></i>
-                <input type="email" id="Email" name="Email" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold placeholder:bg-light-purple" placeholder="Email"><br>
-                <div class="bottom w-2/4 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
-                <i class="fa-solid fa-lock text-white text-lg ml-16"></i>
-                <input type="password" id="Password" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold" placeholder="Password"><br>
-                <div class="bottom w-2/4 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
-                <button class="bg-white text-light-purple h-12 w-44 ml-44 mt-10 rounded-3xl font-semibold text-lg  ">Create Account</button><br>
-                <div class=" pt-6 mb-16">
-                    <a href="Login.html" class="text-white text-lg font-semibold mx-36 underline-offset-2">Already Have Account? Log in</a>
-                </div>
-            </form>
+            <div class=" m-20">
+                <h1 class ="text-white pl-6 pt-10 mb-4 ml-10 text-4xl font-bold"> Creat Your Account </h1>
+                <form action="" class="">
+                    <i class="fa-solid fa-user text-white text-lg ml-16"></i>
+                    <input type="text" id="Username" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold placeholder:bg-light-purple " placeholder="Name"><br>
+                    <div class="bottom w-2/3 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
+                    <i class="fa-solid fa-envelope text-white text-lg ml-16"></i>
+                    <input type="email" id="Email" name="Email" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold placeholder:bg-light-purple" placeholder="Email"><br>
+                    <div class="bottom w-2/3 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
+                    <i class="fa-solid fa-lock text-white text-lg ml-16"></i>
+                    <input type="password" id="Password" name="name" class="text-white bg-light-purple mb-4 mt-5 px-6 py-3 w-2/4 placeholder:text-white placeholder:text-lg placeholder:font-semibold" placeholder="Password"><br>
+                    <div class="bottom w-2/3 h-1 ml-14 bg-white transition-all duration-200 rounded-3xl"></div>
+                    <button class="bg-white text-light-purple h-12 w-44 ml-44 mt-10 rounded-3xl font-semibold text-lg  ">Create Account</button><br>
+                    <div class=" pt-6 mb-16">
+                        <a href="Login.html" class="text-white text-lg font-semibold mx-36 underline-offset-2">Already Have Account?Log in</a>
+                    </div>
+                </form>
+            </div>
             
          </div>
 
