--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <ul>
                     <li class="font-Kanit font-semibold mb-5 text-2xl" data-aos="zoom-in-left" data-aos-delay="400">Services</li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="500"><a href="./privacypolicy.html">Privacy Policy</a></li>
-                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="600"><a href="">Terms of Use</a></li>
+                    <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="600"><a href="./terms&condition.html">Terms of Use</a></li>
                     <li class="font-Inter text-lg mb-2 hover:text-light-purple cursor-pointer transition-all duration-200" data-aos="zoom-in-left" data-aos-delay="700"><a href="">Refund & Cancellation Policy</a></li>
                 </ul>
             </div>
