--- a/send.html
+++ b/send.html
@@ -38,7 +38,7 @@
                     <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                 </li>
                 <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group
-                pb-2 " data-aos="zoom-in-left" data-aos-delay="900"><a href="#">About</a>
+                pb-2 " data-aos="zoom-in-left" data-aos-delay="900"><a href="./about.html">About</a>
                     <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                 </li>
             </ul>
