--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -16,13 +16,13 @@
 </head>
 <body class="overflow-y-scroll scrollbar-hide">
     <nav class="w-full">
-        <div class="flex items-center justify-between pt-5 relative mx-10 overflow-x-hidden">
+        <div class="flex items-center justify-between pt-5 relative mx-10">
             <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/Group 1.svg" alt="The Design Company" width="145px"></a>
     
             <ul class="flex space-x-5 font-semibold text-base font-Inter">
                 <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group 
                 pb-2" data-aos="zoom-in-left" data-aos-delay="450">
-                    <a href="#">Category</a>
+                    <a href="./catagory.html">Category</a>
                     <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                 </li>
                 <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group
@@ -35,7 +35,7 @@
                     <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                 </li>
                 <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group
-                pb-2 " data-aos="zoom-in-left" data-aos-delay="900"><a href="#">About</a>
+                pb-2 " data-aos="zoom-in-left" data-aos-delay="900"><a href="./about.html">About</a>
                     <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                 </li>
             </ul>
