--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
                     <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group
                     pb-2 " data-aos="zoom-in-left" data-aos-delay="600">
-                        <a href="#">Pricing</a>
+                        <a href="./pricing.html">Pricing</a>
                         <div class="absolute bottom-0 w-full h-1 bg-light-purple hidden group-hover:block transition-all duration-200 rounded-3xl"></div>
                     </li>
                     <li class="text-black hover:text-light-purple cursor-pointer transition-all duration-200 relative group 
@@ -59,8 +59,8 @@
             Category
         </p>
        </div>
-       <div class="pt-3 flex space-x-5 w-full overflow-x-scroll scrollbar-hide"> 
-            <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="400"></div>
+       <div class="pt-3 flex space-x-5 w-full overflow-x-scroll scrollbar-hide gap-4"> 
+            <a href="./festival.html"><div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="400"></div></a>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="500"></div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="600"></div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="700"></div>
@@ -212,7 +212,6 @@
             <p>
                 Copyright <b>&#169;</b> 2024 TheDesigncompany Pvt Ltd. All Right reserved
             </p>
-            
         </div>
         </div>
     </div>
