--- a/catagory.html
+++ b/catagory.html
@@ -59,7 +59,7 @@
             <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
                 <div class="h-[179px] w-[245px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/Mahashivratri.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="500" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/holi.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/diwali.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/dushera.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/durgapukja.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/janmashtmi.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/christmas.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/lohri.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/onam.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-
+                        <a href=""><img class="rounded-[22px]" src="./Resources/ramnavmi.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
