--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a href="/catagory.html" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/logodesign cate.png" alt="" class="rounded-2xl"></a>
             </div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="600">
-                <a href="/catagory.html" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/invitation.jpeg" alt="" class="rounded-2xl"></a>
+                <a href="" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/invitation.jpeg" alt="" class="rounded-2xl"></a>
             </div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="700">
                 <a href="" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/marketing.jpeg" alt="" class="rounded-2xl"></a>
