--- a/design.html
+++ b/design.html
@@ -51,7 +51,7 @@
         <div class="w-[1100px] h-[700px]  shrink-0 ">
             <img src="./Resources/mahashiv.jpg" alt="" class="w-full h-full rounded-3xl">
         </div>
-        <div>
+        <div class="text-justify">
             <div class="text-5xl font-Inria-serif pt-4">
                 Mahashivratri
             </div>
