--- a/festival.html
+++ b/festival.html
@@ -58,43 +58,43 @@
             </span>
             <div class="flex gap-6 overflow-x-scroll scrollbar-hide  mx-3 mt-5">
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
-                    <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                    <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px] ">
+                        <a href="./design.html"><img class="rounded-[22px]  object-fill h-[230px] w-[345px]" src="./Resources/mahashiv.jpg"  alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html" class=""><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/durgapukja.jpg"  alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/diwali.jpg" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/lohri.jpg" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/janmashtmi.jpg" class="w-full h-full" alt=""></a>
                     </div>
-                    <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                    <div class="mt-2 text-center font-semibold font-Inter">
+                        <span></span>
                     </div>
                 </div>
             </div>
@@ -106,42 +106,42 @@
             <div class="flex gap-6 overflow-x-scroll scrollbar-hide  mx-3 mt-5">
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/festiv/gurupurnima.jpeg" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/festiv/holi.jpeg" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/festiv/janmashtami.png" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/festiv/lohri.jpg" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="h-[279px] w-[345px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[230px] w-[345px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/mahashiv.jpg" class="w-full h-full" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] object-cover h-[230px] w-[345px]" src="./Resources/festiv/mahashivratri.jpg" class="w-full h-full" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span></span>
                     </div>
                 </div>
             </div>
