--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        </div>
        <div class="pt-3 flex space-x-5 w-full overflow-x-scroll scrollbar-hide"> 
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="400">
-                <a href="/catagory.html" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/Designer.png" alt="" class="rounded-2xl"></a>
+                <a href="/festival.html" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/Designer.png" alt="" class="rounded-2xl"></a>
             </div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="500">
                 <a href="/catagory.html" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/logodesign cate.png" alt="" class="rounded-2xl"></a>
@@ -79,7 +79,7 @@
                 <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/website.jpeg" alt="" class="rounded-2xl"></a>
             </div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1000">
-                <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/customized.jpeg" alt="" class="rounded-2xl"></a>
+                <a href="./Customized.html" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/customized.jpeg" alt="" class="rounded-2xl"></a>
             </div>
             <div class="bg-light-purple rounded-20 border-solid w-200 h-200 rounded-2xl flex-shrink-0 " data-aos="zoom-in-left" data-aos-delay="1100">
                 <a href="/" class="cursor-pointer" data-aos="zoom-in-left" data-aos-delay="300"><img src="./Resources/social.jpeg" alt="" class="rounded-2xl"></a></div>
