--- a/catagory.html
+++ b/catagory.html
@@ -59,7 +59,7 @@
             <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
                 <div class="h-[179px] w-[245px] ml-4" data-aos-delay="400" data-aos="zoom-in-left">
                     <div class="h-[144px] w-[245px] bg-light-purple rounded-[22px]">
-                        <a href="./design.html"><img class="rounded-[22px]" src="./Resources/Mahashivratri.jpg" alt=""></a>
+                        <a href="./design.html"><img class="rounded-[22px] h-[144px] w-[245px]" src="./Resources/mahashiv.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
                         <span>Mahashivratri</span>
@@ -70,7 +70,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/holi.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Holi</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
@@ -78,7 +78,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/diwali.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Diwali</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
@@ -86,7 +86,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/dushera.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Dushera</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
@@ -94,7 +94,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/durgapukja.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Durga Puja</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
@@ -102,7 +102,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/janmashtmi.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Janmashtmi</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
@@ -110,7 +110,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/christmas.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Christmas</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
@@ -118,7 +118,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/lohri.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Lohri</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
@@ -126,7 +126,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/onam.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Onam</span>
                     </div>
                 </div>
                 <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
@@ -134,7 +134,7 @@
                         <a href=""><img class="rounded-[22px]" src="./Resources/ramnavmi.jpg" alt=""></a>
                     </div>
                     <div class=" mt-2 text-center font-semibold font-Inter">
-                        <span>Mahashivratri</span>
+                        <span>Ramnavmi</span>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
        <div>
         <div class="mt-4 ml-8 mx-3" data-aos-delay="400" data-aos="zoom-in-left">
             <span class="font-Inter text-2xl font-bold">
-                Sesonal Festivals Design
+                Content Creation
             </span>
         </div>
         <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
@@ -151,7 +151,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="500" data-aos="zoom-in-left">
@@ -159,7 +159,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
@@ -167,7 +167,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
@@ -175,7 +175,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
@@ -183,7 +183,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
@@ -191,7 +191,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
@@ -199,7 +199,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
@@ -207,7 +207,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
@@ -215,7 +215,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
             <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
@@ -223,7 +223,7 @@
 
                 </div>
                 <div class=" mt-2 text-center font-semibold font-Inter">
-                    <span>Mahashivratri</span>
+                    <span></span>
                 </div>
             </div>
         </div>
@@ -231,7 +231,7 @@
    <div>
     <div class="mt-4 ml-8 mx-3" data-aos-delay="400" data-aos="zoom-in-left">
         <span class="font-Inter text-2xl font-bold">
-            Sesonal Festivals Design
+            Greeting Card Design
         </span>
     </div>
     <div class="flex gap-4 overflow-x-scroll scrollbar-hide mx-3 mt-5">
@@ -240,7 +240,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="500" data-aos="zoom-in-left">
@@ -248,7 +248,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
@@ -256,7 +256,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="600" data-aos="zoom-in-left">
@@ -264,7 +264,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="700" data-aos="zoom-in-left">
@@ -272,7 +272,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="800" data-aos="zoom-in-left">
@@ -280,7 +280,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="900" data-aos="zoom-in-left">
@@ -288,7 +288,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="1000" data-aos="zoom-in-left">
@@ -296,7 +296,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="1100" data-aos="zoom-in-left">
@@ -304,7 +304,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
         <div class="h-[179px] w-[245px]" data-aos-delay="1200" data-aos="zoom-in-left">
@@ -312,7 +312,7 @@
 
             </div>
             <div class=" mt-2 text-center font-semibold font-Inter">
-                <span>Mahashivratri</span>
+                <span></span>
             </div>
         </div>
     </div>
